--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://cdn.gencraft.com/prod/user/a325e320-f604-42ea-9195-8f04f6464996/62d2857e-d91a-4dbf-9170-9ac6953397d9/images/image0_0.jpg?Expires=1695389580&Signature=e3rk4sJgeOb-I7UeWrv9z9M5P8RSIhLGp6SzAwjKGTuu0hQ5S2bU-6v4q2rCccy2vyMv3gEtZQBnEdRYKIS0KWgLUBxhvoDcgdIg~xduU7b2PVBOrWHXWK7XiI7JapYajKFUw-DwzXR-fRaYHzMGOzPgl~iGnzx896SPe6Ae~TSgxWhHptXNImAeQz-8hoBZ56NU9T0sGf7W5tubvPubRuaosqSAfQMn56XsDc-Cu3dYTrpAyVDr9xzBHU94dNeT8vFmoGR8Mt2iHrqMc~I0RjqEDpCgcY7yeR1N2EoqWMuWGDztTv0DyPVP49oSdAmcEUWeZzNHxlsXfW9EtQCrIA__&Key-Pair-Id=K3RDDB1TZ8BHT8" />
+    <link rel="icon" href="https://img.freepik.com/fonts/public/323/conversions/Explore-Wonders-preview.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
